feat: 添加双语文本包装器以同时显示本地化和英文文本
添加 DualLanguageWrapper 类，通过 Mixin 注入 Language 实例，在获取文本时同时显示本地化和英文版本，并用竖线分隔。包含处理格式化占位符的逻辑，确保参数索引一致。新增 LanguageMixin 和 LanguageInvoker 以支持包装器注入。

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,10 +6,10 @@ license = "MIT"
 [[mods]]
 modId = "asen"
 version = "${version}"
-displayName = "asen"
+displayName = "Always Show English"
 authors = "aixiaoji"
 description = '''
-mgmc-example
+Automatically appends English translations after the current language
 '''
 #logoFile = ""
 
