--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
-mod_version=1.0.0+MC1.21.4+fabric
+mod_version=1.0.0+MC1.21.11
 maven_group=ltd.nb6
-archives_name=asen
+archives_name=Always Show English
 enabled_platforms=fabric,neoforge
 # Minecraft properties
 minecraft_version=1.21.11
