ci(release): 支持手动触发并优化发布资产收集
- 添加 workflow_dispatch 触发器以支持手动执行发布流程
- 创建专门的 release-assets 目录来收集构建产物
- 精确匹配 Fabric 和 NeoForge 的发布 jar 文件
- 过滤掉开发版、源码包和影子构建等非发布资产
- 在 GitHub Release 中自动生成版本说明

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,8 @@ name: Release
 on:
   push:
     tags:
-      - 'v*' # 当推送以 v 开头的 tag 时触发，例如 v0.1.0
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   release:
@@ -31,18 +32,31 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+      - name: Prepare Release Assets
+        run: |
+          mkdir -p release-assets
+          # 收集 Fabric 产物
+          cp fabric/build/libs/*[!d][!e][!v].jar release-assets/ || true
+          # 收集 NeoForge 产物
+          cp neoforge/build/libs/*[!d][!e][!v].jar release-assets/ || true
+          # 移除 sources 和 shadow-dev 产物（如果上面的匹配不够精确）
+          rm -f release-assets/*-sources.jar
+          rm -f release-assets/*-dev-shadow.jar
+          rm -f release-assets/*-dev.jar
+          ls -R release-assets/
+
       - name: Get Version
         id: get_version
         run: |
           VERSION=$(grep "mod_version=" gradle.properties | cut -d'=' -f2)
-          echo "MOD_VERSION=$VERSION" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Update Release Assets
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            build/libs/*.jar
+          files: release-assets/*.jar
           tag_name: ${{ github.ref_name }}
+          name: Release ${{ steps.get_version.outputs.VERSION }}
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
